# lfilesystem

./: .bumpversion.cfg  .clang-format  .clang-tidy  .editorconfig  .envrc  .gitattributes  .pre-commit-config.yaml  .tool-versions  CITATION.cff  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md  annotated.html  annotated_dup.js  classes.html  classlimes_1_1files_1_1CFile-members.html  classlimes_1_1files_1_1CFile.html  classlimes_1_1files_1_1CFile.js  classlimes_1_1files_1_1Directory-members.html  classlimes_1_1files_1_1Directory.html  classlimes_1_1files_1_1Directory.js  classlimes_1_1files_1_1Directory__inherit__graph.map  classlimes_1_1files_1_1Directory__inherit__graph.md5  classlimes_1_1files_1_1DynamicLibrary-members.html  classlimes_1_1files_1_1DynamicLibrary.html  classlimes_1_1files_1_1DynamicLibrary.js  classlimes_1_1files_1_1DynamicLibrary_1_1Listener-members.html  classlimes_1_1files_1_1DynamicLibrary_1_1Listener.html  classlimes_1_1files_1_1DynamicLibrary_1_1Listener.js  classlimes_1_1files_1_1DynamicLibrary_1_1Reloader-members.html  classlimes_1_1files_1_1DynamicLibrary_1_1Reloader.html  classlimes_1_1files_1_1DynamicLibrary_1_1Reloader.js  classlimes_1_1files_1_1DynamicLibrary_1_1Reloader__inherit__graph.map  classlimes_1_1files_1_1DynamicLibrary_1_1Reloader__inherit__graph.md5  classlimes_1_1files_1_1File-members.html  classlimes_1_1files_1_1File.html  classlimes_1_1files_1_1File.js  classlimes_1_1files_1_1FileWatcher-members.html  classlimes_1_1files_1_1FileWatcher.html  (+416 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  docs.yml
cli/: CMakeLists.txt  main.cpp  modes.cpp  modes.h
cli/modes/: basename.h  cat.h  cp.h  df.h
cli/test/: Basename.cmake  CMakeLists.txt  CP.cmake  Cat.cmake
cmake/: lfilesystem-config.in  test-ios.sh  version.in
cmake/presets/: android.json  base.json  emscripten.json  ios.json  tvos.json  watchos.json
docs/: CMakeLists.txt
docs/examples/: files_dir_enumerate.cpp  files_dir_listen.cpp
include/lfilesystem/: lfilesystem.h  lfilesystem_CFile.h  lfilesystem_Directory.h  lfilesystem_DynamicLibrary.h  lfilesystem_File.h  lfilesystem_FileWatcher.h  lfilesystem_FilesystemEntry.h  lfilesystem_Misc.h  lfilesystem_Paths.h  lfilesystem_Permissions.h  lfilesystem_SimpleWatcher.h  lfilesystem_SpecialDirectories.h  lfilesystem_SymLink.h  lfilesystem_Volume.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+38 more)
src/: CMakeLists.txt  lfilesystem_CFile.cpp  lfilesystem_Directory.cpp  lfilesystem_DynamicLibrary.cpp  lfilesystem_File.cpp  lfilesystem_FilesystemEntry.cpp  lfilesystem_Paths.cpp  lfilesystem_Permissions.cpp  lfilesystem_SimpleWatcher.cpp  lfilesystem_SpecialDirs_Common.cpp  lfilesystem_SymLink.cpp  lfilesystem_Volume_Common.cpp
src/native/: lfilesystem_Entries_Linux.cpp  lfilesystem_Entries_Mac.mm  lfilesystem_Entries_Windows.cpp  lfilesystem_FileWatcher_Linux.cpp  lfilesystem_FileWatcher_Mac.mm  lfilesystem_FileWatcher_Unsupported.cpp  lfilesystem_FileWatcher_Windows.cpp  lfilesystem_SpecialDirs_Android.cpp  lfilesystem_SpecialDirs_Linux.cpp  lfilesystem_SpecialDirs_Mac.mm  lfilesystem_SpecialDirs_Windows.cpp  lfilesystem_Volume_Linux.cpp  lfilesystem_Volume_Mac.mm  lfilesystem_Volume_Windows.cpp
tests/: CFile.cpp  CMakeLists.txt  Directory.cpp  File.cpp  FileWatcher.cpp  FilesystemEntry.cpp  Info.plist  PathFunctions.cpp  Permissions.cpp  SpecialDirs.cpp  SymLink.cpp  Volume.cpp
tests/DynamicLibrary/: CMakeLists.txt  shared_lib.cpp  tests.cpp
tests/ExecLocation/: CMakeLists.txt  main.cpp
tests/FindPackage/: CMakeLists.txt  CreateTests.cmake  main.cpp
tests/StructuredTree/: CMakeLists.txt  CreateTree.cmake  main.cpp
tests/data/: .editorconfig  lines.txt  string.txt
